# fla-decoder

./: .gitignore  LICENSE  NOTICE  README.md  game_inventory.json  pyproject.toml
docs/: FORMAT.md  OPEN_PROBLEMS.md  RE_JOURNEY.md
fla_decoder/: __init__.py  audio.py  bitmaps.py  decoder.py  lossless.py  to_svg.py
research/: README.md  decode_runtime_classes.py  find_class_refs.py  find_serialize.py
research/data/: runtime_classes.json  serialize_vas.json
scripts/: audit.py  decode.py  extract_all.py  extract_library.py  extract_media.py  inspect_symbols.py
